setupshowroom-backend/kubernetes/monitoring/monitoring-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "grafana-letsencrypt"
spec:
  ingressClassName: nginx
  rules:
    - host: <YOUR_HOST>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
  tls:
    - hosts:
        - <YOUR_HOST>
      secretName: grafana-backend-tls
